Stats info and instancing "misinformation" #65278

Closed
opened 2019-05-29 18:14:20 +02:00 by Dalai Felinto · 7 comments

Blender Version
Broken: 13f292d10d3b(blender2.8 HEAD)
Worked: 2.79

Short description of error
Object count and polygon count should ignore instance.

Exact steps for others to reproduce the error
instance.blend

Stats show:
Verts: 12 | Faces: 4 | Objects 1/7

While in 2.79 we would have:
Verts: 3 | Faces: 1 | Objects 1/4

**Blender Version** Broken: 13f292d10d3b(blender2.8 HEAD) Worked: 2.79 **Short description of error** Object count and polygon count should ignore instance. **Exact steps for others to reproduce the error** [instance.blend](https://archive.blender.org/developer/F7078451/instance.blend) Stats show: Verts: 12 | Faces: 4 | Objects 1/7 While in 2.79 we would have: Verts: 3 | Faces: 1 | Objects 1/4
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2019-05-29 18:18:35 +02:00
Author
Owner

Note, in 2.79 if the group/collection was linked, it would not count it towards the mesh count not even once.
I think in 2.80 we could count each Mesh datablock once.

Note, in 2.79 if the group/collection was linked, it would not count it towards the mesh count not even once. I think in 2.80 we could count each Mesh datablock once.

This issue was referenced by db67a17d17

This issue was referenced by db67a17d17e39905271fe09d7814b028db9aef38
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @PaulMelis

Added subscriber: @PaulMelis

I'm curious about this change, as the poly count in the status bar always seemed to be related to the amount of geometry drawn. For example, even when making duplicated copies of objects in 2.79 with Alt-D the count would increase. And switching layers (and currently collections) will also change the count, so it is at least somehow related to what is on screen. So what is the point of not counting instanced geometry when that seems to mostly create a confusing relationship between the status bar poly count and what is visible on screen? Hopefully a statistic that is so prominently displayed in the UI should be easy to understand?

I'm curious about this change, as the poly count in the status bar always seemed to be related to the amount of geometry *drawn*. For example, even when making duplicated copies of objects in 2.79 with Alt-D the count would increase. And switching layers (and currently collections) will also change the count, so it is at least somehow related to what is on screen. So what is the point of *not* counting instanced geometry when that seems to mostly create a confusing relationship between the status bar poly count and what is visible on screen? Hopefully a statistic that is so prominently displayed in the UI should be easy to understand?
Author
Owner

@PaulMelis 2.79 got it wrong very differently. For instance, if you link in a group with heavy meshes it would not count towards the geometry count.

Now for 2.80, we count the geometry that has an impact in memory. If you have duplicated copies of a mesh they don't take more memory space (in the RAM anyways).

@PaulMelis 2.79 got it wrong very differently. For instance, if you link in a group with heavy meshes it would not count towards the geometry count. Now for 2.80, we count the geometry that has an impact in memory. If you have duplicated copies of a mesh they don't take more memory space (in the RAM anyways).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65278
No description provided.